Disable LTO on x86

--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -90,6 +90,8 @@ jobs:
             arch: { name: linux-x86, emulator: "" }
           - gc: commix
             arch: { name: linux-x86, emulator: "" }
+          - lto: thin
+            arch: { name: linux-x86, emulator: "" }
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/linux-setup-env
