--- a/.github/workflows/run-jdk-compliance-tests.yml
+++ b/.github/workflows/run-jdk-compliance-tests.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         os: [ubuntu-18.04, macos-10.15]
         scala: [3.1.3]
-        java: [11]
+        java: [11, 17]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -46,7 +46,7 @@ jobs:
       fail-fast: false
       matrix:
         scala: [3.1.3]
-        java: [11]
+        java: [11, 17]
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
