Update multiarch JVM version to match that used in Linux, macOS, & Windows (#2703)
* Update JVM version to Adoptium JDK 332 Hotspot

* 332 failing on multi-arch, see what _is_ available

* Now multi-arch uses 332-tem

--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -28,7 +28,7 @@ WORKDIR /home/scala-native/scala-native
 RUN curl -s "https://get.sdkman.io" | bash  \
   && . "$HOME/.sdkman/bin/sdkman-init.sh" \
   && sdk install sbt 1.6.2 \ 
-  && sdk install java 8.0.275.hs-adpt
+  && sdk install java 8.0.332-tem
 
 ENV LC_ALL "C.UTF-8"
 ENV LANG "C.UTF-8"
