--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -66,7 +66,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8, 2.12.16, 2.11.12]
+        scala: [3.1.3, 2.13.8]
         build-mode: [debug, release-fast]
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
@@ -75,15 +75,19 @@ jobs:
           - scala: 2.13.8
             build-mode: debug
             gc: immix
+        include:
+          - scala: 2.11.12
+            build-mode: debug
+            gc: immix
+          - scala: 2.11.12
+            build-mode: release-fast
+            gc: commix
           - scala: 2.12.16
             build-mode: debug
             gc: immix
-          - scala: 2.12.15
-            gc: boehm
-          - scala: 2.11.12
+          - scala: 2.12.16
+            build-mode: release-fast
             gc: commix
-          - scala: 2.11.12
-            gc: boehm
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/linux-setup-env
@@ -106,7 +110,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8, 2.12.16, 2.11.12]
+        scala: [3.1.3, 2.13.8]
         build-mode: [debug]
         include:
           - scala: 2.13.8
@@ -131,7 +135,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8, 2.12.16, 2.11.12]
+        scala: [3.1.3, 2.13.8]
         lto: [thin]
         optimize: [true]
         include:
@@ -139,7 +143,7 @@ jobs:
           - scala: 2.13.8
             lto: full
             optimize: true
-          - scala: 2.12.16
+          - scala: 3.1.3
             lto: full
             optimize: false
 
