--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -17,8 +17,19 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [3.1.3, 2.13.8, 2.12.16, 2.11.12]
-        gc: [none, boehm, immix, commix]
+        scala: [3.1.3, 2.13.8]
+        gc: [boehm, immix, commix]
+        include: 
+        - scala: 2.11.12
+          gc: immix
+        - scala: 2.11.12
+          gc: commix
+        - scala: 2.12.16
+          gc: immix
+        - scala: 2.12.16
+          gc: commix
+        - scala: 2.13.8
+          gc: none
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
@@ -86,7 +97,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8, 2.12.16, 2.11.12]
+        scala: [3.1.3, 2.13.8]
         build-mode: [release-fast]
         lto: [thin]
         optimize: [true]
