--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -5,7 +5,8 @@ ENV DEFAULT_DOCKCROSS_IMAGE testing-container
 
 RUN apt-get update && apt-get install -y unzip lsb-release wget software-properties-common
 
-RUN bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
+# Install clang-14, by default llvm.sh install latest stable version
+RUN wget -O - https://apt.llvm.org/llvm.sh | bash /dev/stdin 14
 
 RUN update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 100
 RUN update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-14 100
