Update scalafmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -33,7 +33,7 @@ rewriteTokens = {
   "←": "<-"
 }
 fileOverride {
-  "glob:**/src/**/scala-3/**" {
+  "glob:**/src/**/scala-3*/**" {
      runner.dialect = scala3
   }
 }
