--- a/.github/workflows/run-tests-macos.yml
+++ b/.github/workflows/run-tests-macos.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8, 2.12.16, 2.11.12]
+        scala: [3.2.0, 2.13.8, 2.12.16, 2.11.12]
         gc: [immix]
         include:
           - scala: 2.13.8
@@ -25,6 +25,8 @@ jobs:
             gc: boehm
           - scala: 2.11.12
             gc: none
+          - scala: 3.1.3
+            gc: immix
 
     steps:
       - uses: actions/checkout@v2
@@ -52,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.12.16, 3.1.3]
+        scala: [2.12.16, 3.2.0]
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/macos-setup-env
