--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [3.1.3, 2.13.8]
+        scala: [3.2.0, 2.13.8]
         gc: [boehm, immix, commix]
         include: 
         - scala: 2.11.12
@@ -30,6 +30,8 @@ jobs:
           gc: commix
         - scala: 2.13.8
           gc: none
+        - scala: 3.1.3
+          gc: immix
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
@@ -77,7 +79,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [2.12.16, 3.1.3]
+        scala: [2.12.16, 3.2.0]
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
@@ -97,12 +99,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8]
+        scala: [3.2.0, 2.13.8]
         build-mode: [release-fast]
         lto: [thin]
         optimize: [true]
         include:
-          - scala: 3.1.3
+          - scala: 3.2.0
             lto: full
             optimize: true
           - scala: 2.13.8
