--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8, 2.12.16, 2.11.12]
+        scala: [3.2.0, 2.13.8, 2.12.16, 2.11.12]
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/linux-setup-env
@@ -64,7 +64,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8]
+        scala: [3.2.0, 2.13.8]
         build-mode: [debug, release-fast]
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
@@ -84,6 +84,12 @@ jobs:
             build-mode: debug
             gc: immix
           - scala: 2.12.16
+            build-mode: release-fast
+            gc: commix
+          - scala: 3.1.3
+            build-mode: debug
+            gc: immix
+          - scala: 3.1.3
             build-mode: release-fast
             gc: commix
     steps:
@@ -108,7 +114,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8]
+        scala: [3.2.0, 2.13.8]
         build-mode: [debug]
         include:
           - scala: 2.13.8
@@ -133,7 +139,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3, 2.13.8]
+        scala: [3.2.0, 2.13.8]
         lto: [thin]
         optimize: [true]
         include:
@@ -141,7 +147,7 @@ jobs:
           - scala: 2.13.8
             lto: full
             optimize: true
-          - scala: 3.1.3
+          - scala: 3.2.0
             lto: full
             optimize: false
 
