--- a/.github/actions/linux-setup-env/action.yml
+++ b/.github/actions/linux-setup-env/action.yml
@@ -13,7 +13,7 @@ runs:
     - uses: actions/setup-java@v3
       with:
         distribution: "temurin"
-        java-version: ${{inputs.java-version}}"
+        java-version: ${{inputs.java-version}}
     - name: Calculate binary version
       shell: bash
       run: |
