--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -17,18 +17,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.0, 2.13.8]
+        os: [windows-2019]
+        scala: [3.2.0, 2.13.10]
         gc: [boehm, immix, commix]
         include: 
         - scala: 2.11.12
           gc: immix
         - scala: 2.11.12
           gc: commix
-        - scala: 2.12.16
+        - scala: 2.12.17
           gc: immix
-        - scala: 2.12.16
+        - scala: 2.12.17
           gc: commix
-        - scala: 2.13.8
+        - scala: 2.13.10
           gc: none
         - scala: 3.1.3
           gc: immix
@@ -79,7 +80,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [2.12.16, 3.1.3]
+        scala: [2.12.17, 3.1.3]
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
@@ -99,7 +100,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.0, 2.13.8]
+        scala: [3.2.0, 2.13.10]
         build-mode: [release-fast]
         lto: [thin]
         optimize: [true]
@@ -107,10 +108,10 @@ jobs:
           - scala: 3.2.0
             lto: full
             optimize: true
-          - scala: 2.13.8
+          - scala: 2.13.10
             lto: full
             optimize: true
-          - scala: 2.12.16
+          - scala: 2.12.17
             lto: full
             optimize: false
     steps:
