Move building deps to dedicated script

--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -11,27 +11,8 @@ RUN wget -O - https://apt.llvm.org/llvm.sh | bash /dev/stdin 14
 RUN update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 100
 RUN update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-14 100
 
-# We cannot easily install dependencies, clone and build zlib and Boehm locally
-RUN git clone https://github.com/madler/zlib zlib \
-  && cd zlib/ \
-  && git checkout v1.2.13 \
-  && ./configure \
-  && make install prefix=$QEMU_LD_PREFIX \
-  && cd .. \
-  && rm -rf zlib
-
-RUN git clone https://github.com/ivmai/bdwgc bdwgc \
-  && cd bdwgc/ \
-  && git checkout v8.2.2 \
-  && git clone https://github.com/ivmai/libatomic_ops \
-  && cd libatomic_ops/ \
-  && git checkout v7.6.14 \
-  && cd .. \
-  && ./autogen.sh \
-  && ./configure --host $CROSS_TRIPLE \
-  && make install prefix=$QEMU_LD_PREFIX \
-  && cd .. \
-  && rm -rf bdwgc
+ADD build-deps.sh build-deps.sh
+RUN sh build-deps.sh
 
 # Switch shell and user to allow for usage of sdk and installed by it binaries 
 SHELL ["/bin/bash", "-c"]
