--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -76,24 +76,16 @@ jobs:
             { name: linux-x86, emulator: "" },
           ]
         scala: [2.13.10, 3.2.0]
-        build-mode: [releaseFast]
+        build-mode: [debug, releaseFast]
         lto: [thin]
-        gc: [boehm, immix, commix]
+        gc: [immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
         exclude:
           - gc: immix
-            lto: none
+            build-mode: debug
           - gc: commix
-            lto: thin
-          - gc: boehm
-            arch: { name: linux-arm64, emulator: qemu-aarch64-static }
-          - gc: immix
-            arch: { name: linux-x86, emulator: "" }
-          - gc: commix
-            arch: { name: linux-x86, emulator: "" }
-          - lto: thin
-            arch: { name: linux-x86, emulator: "" }
+            build-mode: release-fast
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
