--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -20,8 +20,8 @@ RUN git clone https://github.com/ivmai/bdwgc /tmp/bdwgc \
   && git checkout v7.6.14 \
   && cd .. \
   && autoreconf -vif \
-  && ./configure prefix=$QEMU_LD_PREFIX --host $CROSS_TRIPLE \
-  && make  install prefix=$QEMU_LD_PREFIX verbose=true \
+  && ./configure  verbose=true  prefix=$QEMU_LD_PREFIX --host $CROSS_TRIPLE \
+  && make  install prefix=$QEMU_LD_PREFIX\
   && rm -rf /tmp/bdwgc
 
 RUN git clone https://github.com/madler/zlib /tmp/zlib \
