--- a/ci-docker/linux-arm64/Dockerfile
+++ b/ci-docker/linux-arm64/Dockerfile
@@ -3,7 +3,7 @@ ARG TARGET_PLATFORM
 FROM dockcross/$TARGET_PLATFORM
 ENV DEFAULT_DOCKCROSS_IMAGE testing-container
 
-RUN apt-get update && apt-get install -y unzip lsb-release wget software-properties-common gcc-10
+RUN apt-get update && apt-get install -y unzip lsb-release wget software-properties-common
 
 # Install clang-14, by default llvm.sh install latest stable version
 RUN wget -O - https://apt.llvm.org/llvm.sh | bash /dev/stdin 14
@@ -12,24 +12,24 @@ RUN update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 100
 RUN update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-14 100
 
 # We cannot easily install dependencies, clone and build zlib and Boehm locally
-RUN git clone https://github.com/ivmai/bdwgc /tmp/bdwgc \
-  && cd /tmp/bdwgc/ \
-  && git checkout v8.2.2 \
-  && git clone https://github.com/ivmai/libatomic_ops \
-  && cd libatomic_ops/ \
-  && git checkout v7.6.14 \
-  && cd .. \
-  && autoreconf -vif \
-  && ./configure  verbose=true  prefix=$QEMU_LD_PREFIX --host $CROSS_TRIPLE \
-  && make SHELL="sh -x" install prefix=$QEMU_LD_PREFIX\
-  && rm -rf /tmp/bdwgc
-
 RUN git clone https://github.com/madler/zlib /tmp/zlib \
   && cd /tmp/zlib/ \
   && git checkout v1.2.11 \
   && ./configure \
   && make install prefix=$QEMU_LD_PREFIX \
   && rm -rf /tmp/zlib
+
+RUN git clone https://github.com/ivmai/bdwgc /tmp/bdwgc \
+  && cd /tmp/bdwgc/ \
+  && git checkout v8.0.6 \
+  && git clone https://github.com/ivmai/libatomic_ops \
+  && cd libatomic_ops/ \
+  && git checkout v7.6.12 \
+  && cd .. \
+  && ./autogen.sh \
+  && ./configure --host $CROSS_TRIPLE \
+  && make install prefix=$QEMU_LD_PREFIX \
+  && rm -rf /tmp/bdwgc
 
 # Switch shell and user to allow for usage of sdk and installed by it binaries 
 SHELL ["/bin/bash", "-c"]
