--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -1,7 +1,7 @@
 ARG BASE_IMAGE
-ARG LLVM_VERSION=14
+ARG LLVM_VERSION
 
-FROM $BASE_IMAGE
+FROM --platform=${BUILDPLATFORM} $BASE_IMAGE as cross
 RUN apt-get update && apt-get install -y zip unzip lsb-release curl wget software-properties-common libgc-dev libz-dev
 
 RUN wget -O - https://apt.llvm.org/llvm.sh | bash /dev/stdin $LLVM_VERSION
