--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -50,7 +50,7 @@ jobs:
           . ./ci-docker/env/${{matrix.arch}}
 
           docker pull localhost:5000/${imageName} || true
-          docker build \
+          docker buildx build \
           -t ${imageName} \
           --cache-from=localhost:5000/${imageName} \
           --build-arg BASE_IMAGE=$BASE_IMAGE \
